# google-workspace-mcp

./: .coveragerc  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  search_recent.py
.claude/: settings.local.json
google_workspace_mcp/: __main__.py  server.py  server_fastmcp.py
google_workspace_mcp/auth/: oauth_handler.py
google_workspace_mcp/services/: docs_service.py  drive_service.py  forms_service.py  gmail_service.py  sheets_service.py  slides_service.py
google_workspace_mcp/tools/: __init__.py  docs_tools.py  drive_tools.py  forms_tools.py  gmail_tools.py  sheets_tools.py  slides_tools.py
google_workspace_mcp/utils/: base_models.py  cache.py  error_handler.py  logger.py  rate_limiter.py  response_formatter.py
tests/: conftest.py  test_docs_service.py  test_docs_tools.py  test_drive_service.py  test_drive_tools.py  test_forms_service.py  test_forms_tools.py  test_gmail_service.py  test_gmail_tools.py  test_integration.py  test_sheets_service.py  test_sheets_tools.py  test_slides_service.py  test_slides_tools.py
