[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-workspace-mcp"
version = "1.0.1"
description = "Google Workspace MCP Server for Claude Code - Drive, Docs, Sheets, Slides, Gmail integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "crazybass81"}
]
keywords = ["mcp", "google-workspace", "google-drive", "google-docs", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-api-python-client==2.184.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "google-auth==2.41.1",
    "google-api-core==2.26.0",
    "mcp==1.17.0",
    "aiohttp==3.12.15",
    "pydantic==2.11.4",
    "python-dotenv==1.1.0",
    "cryptography==46.0.2",
    "cachetools==5.5.2",
]

[project.urls]
Homepage = "https://github.com/crazybass81/google-workspace-mcp"
Repository = "https://github.com/crazybass81/google-workspace-mcp"
Issues = "https://github.com/crazybass81/google-workspace-mcp/issues"

[project.scripts]
google-workspace-mcp = "google_workspace_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["google_workspace_mcp*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise Python syntax)
]
ignore = [
    "E501",  # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["google_workspace_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
